...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enter_remote_weight" />

            <Spinner
                android:id="@+id/enterRemoteWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enter_salary_weight" />

            <Spinner
                android:id="@+id/enterSalaryWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="40dp"
                android:ems="10"
                android:inputType="text" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enter_bonus_weight" />

            <Spinner
                android:id="@+id/enterBonusWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="40dp"
                android:ems="10"
                android:inputType="text" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enter_benefit_weight" />

            <Spinner
                android:id="@+id/enterBenefitWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="40dp"
                android:ems="10"
                android:inputType="text" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enter_leave_weight" />

            <Spinner
                android:id="@+id/enterLeaveWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="40dp"
                android:ems="10"
                android:inputType="text" />
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/updateWeights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="handleClick"
                app:icon="@drawable/baseline_save_24"
                android:text="@string/update_weight_button" />

            <Button
                android:id="@+id/cancelWeights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="handleClick"
                style="?attr/materialButtonOutlinedStyle"
                android:text="@string/cancel_button" />
...
