...
            android:layout_height="wrap_content"
            android:text="@string/display_title"
            android:textAlignment="center"
            android:textSize="36sp" />

        <Button
            android:id="@+id/editCurrentJob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="handleClick"
            android:text="@string/current_job_button" />

        <Button
            android:id="@+id/enterJobOffer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="handleClick"
            android:text="@string/job_offer_button" />

        <Button
            android:id="@+id/comparisonSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="handleClick"
            android:text="@string/comparison_settings_button" />

        <Button
...
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="handleClick"
            android:text="@string/compare_jobs_button" />

        <Button
            android:id="@+id/resetApplication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="handleClick"
            android:text="@string/reset_application_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
...
