...
    <string name="enter_remote_weight">Remote Days Weight:</string>
    <string name="enter_salary_weight">Salary Weight:</string>
    <string name="enter_bonus_weight">Bonus Weight:</string>
    <string name="enter_benefit_weight">Benefit Weight:</string>
    <string name="enter_leave_weight">Leave Weight:</string>
    <string name="update_weight_button">Update Weights</string>
    <string name="current_job_app_title">Current Job</string>
    <string name="job_offer_app_title">Job Offer</string>
    <string name="compare_rank_button">Compare</string>
    <string name="first_job_label">Job #1</string>
    <string name="second_job_label">Job #2</string>
    <string name="return_button">Return</string>
    <string name="job_another_offer_button">Enter Another Job Offer</string>

...
